--- a/.gitignore
+++ b/.gitignore
@@ -161,8 +161,12 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-#data files
+# data files
 data_files/
 BioProgPy/data/
 db/Lab4/LabCovid
 Assessment2/data/
+
+# db files
+.db
+.db-journal
